# ninety-nine-problems

one-to-ten/: README.md  one-to-ten.cabal
one-to-ten/.stack-work/install/x86_64-osx/lts-9.6/8.0.2/flag-cache/: HUnit-1.5.0.0-DvjF79OHhCC7SzfeEty4OI  QuickCheck-2.9.2-LvlomhGMxrFBkX1zwiWpQu  ansi-terminal-0.6.3.1-3RTqikoQf47ajVD9m8zgB  async-2.1.1.1-8yywY4inVGRLJSCg60gBXj  call-stack-0.1.0-FYVrCPXGP9EGAuTW32963O  ghc-paths-0.1.0.9-AhaDlGOsRAepox069XzG  haskeline-0.7.4.0-DeCMMzb9PSJC3zwcMXMk7s  hspec-2.4.4-Ct0Af2AzisB8bPqGMHHFvj  hspec-core-2.4.4-Ezb0jq4rRfBJWZtpolvs1E  hspec-discover-2.4.4-99Suq6sFZ1T6o4isjc43TZ  hspec-expectations-0.8.2-DujBeQFEMmfJJRLad7XQgd  intero-0.1.21  one-to-ten-0.1.0.0-GMW0cwlHCIMF7v8w30g4Rz  primitive-0.6.2.0-4578caNkWQ54Gt1mxLF2Yh  (+7 more)
one-to-ten/.stack-work/intero/: intero4LX3Qj.hs  intero4vNxq4.hs  interoHvZC2B.hs  interoV3aZPK.hs  interoajyt7n.hs  interomXde7k.hs  interonbULL9.hs  interoyEeCVm.hs  interozvragQ.hs
one-to-ten/.stack-work/intero/interojCfPOc/: Main.hi
one-to-ten/.stack-work/intero/interojCfPOc/Data/List/: Element.hi  ElementASpec.hi  ElementAt.hi  ElementAtSpec.hi  ElementSpec.hi  Is.hi  IsPa.hi  IsPal.hi  IsPalindrome.hi  IsPan.hi  My.hi  MyButLast.hi  MyButLastSpec.hi  MyLast.hi  MyLastSpec.hi  MyLength.hi  MyLengthSpec.hi  MyRever.hi  MyReverse.hi  MyReverseSpec.hi  MySpec.hi  Spec.hi
one-to-ten/.stack-work/intero/interojCfPOc/Data/String/: Strip.hi  StripSpec.hi
one-to-ten/src/Data/List/: .#IsPalindrome.hs  Elementat.hs  MyButLast.hs  MyLast.hs  MyReverse.hs
one-to-ten/test/Data/List/: MyLastSpec.hs
(+11 files in other folders)
