name:                one-to-ten
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/RyanDur/one-to-ten#readme
license:             BSD3
license-file:        LICENSE
author:              Ryan Durling
maintainer:          ryan.p.durling@gmail.com
copyright:           Ryan Durling
category:            web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.String.Strip
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable one-to-ten
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , one-to-ten
  default-language:    Haskell2010

test-suite one-to-ten-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , one-to-ten
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/RyanDur/one-to-ten
